--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+
+    //coroutine support
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1" //viewModelScope
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1" //liveData
+    implementation "androidx.room:room-ktx:2.5.0"
 }
